0.0--setup-istio/disable-tls-for-nonistio-hosts.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
 name: "prometheus"
 namespace: "istio-system"
spec:
 host: "prometheus.istio-system.svc.cluster.local"
 trafficPolicy:
   tls:
     mode: DISABLE
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
 name: "grafana"
 namespace: "istio-system"
spec:
 host: "grafana.istio-system.svc.cluster.local"
 trafficPolicy:
   tls:
     mode: DISABLE
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
 name: "jaeger"
 namespace: "istio-system"
spec:
 host: "jaeger-query.istio-system.svc.cluster.local"
 trafficPolicy:
   tls:
     mode: DISABLE
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
 name: "kibana"
 namespace: "istio-system"
spec:
 host: "kibana.logging.svc.cluster.local"
 trafficPolicy:
   tls:
     mode: DISABLE
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
 name: "kiali"
 namespace: "istio-system"
spec:
 host: "kiali.istio-system.svc.cluster.local"
 trafficPolicy:
   tls:
     mode: DISABLE
---
